@@ -1,6 +1,6 @@
 /* This is dvipdfmx, an eXtended version of dvipdfm by Mark A. Wicks.
 
-    Copyright (C) 2002-2018 by Jin-Hwan Cho and Shunsaku Hirata,
+    Copyright (C) 2002-2020 by Jin-Hwan Cho and Shunsaku Hirata,
     the dvipdfmx project team.
     
     This program is free software; you can redistribute it and/or modify
@@ -65,12 +65,10 @@ extern void     tt_cmap_release (tt_cmap *cmap);
 
 /* Indirect reference */
 extern pdf_obj *otf_create_ToUnicode_stream (const char *map_name,
-                                             int ttc_index,
+                                             uint32_t    ttc_index,
                                              const char *basefont,
                                              const char *used_chars);
 /* CMap ID */
-extern int  otf_load_Unicode_CMap (const char *map_name,
-					                         int ttc_index,
-					                         const char *otl_opts, int wmode);
-extern int  otf_try_load_GID_to_CID_map (const char *map_name, int ttc_index, int wmode);
+extern int  otf_load_Unicode_CMap (const char *map_name, uint32_t ttc_index, const char *otl_opts, int wmode);
+extern int  otf_try_load_GID_to_CID_map (const char *map_name, uint32_t ttc_index, int wmode);
 #endif /* _TT_CMAP_H_ */
